--- a/index.html
+++ b/index.html
@@ -11,10 +11,50 @@
     <div class="form-box">
       <h2>Busque um CEP</h2>
       <form id="cep-form">
-        <input autocomplete="off" id="cep-input" type="text" placeholder="Digite o cep" />
+        <input autocomplete="off" id="cep-input" type="number" placeholder="Digite o cep">
         <button id="cep-submit" type="submit">Buscar</button>
       </form>
-      <span id="result"></span>
+      <div id="result">
+      </div>
+    </div>
+
+    <div class="container__rua">
+      <h2>Busque uma Rua</h2>
+      <form id="ruaForm">
+        <input type="text" id="ruaInput" placeholder="Nome da Rua">
+        <input type="text" id="cidadeInput" placeholder="Cidade">
+        <select name="Estado" id="estadoInput">
+          <option value="Selecione" disabled selected>Estado</option>
+          <option value="AC">Acre</option>
+          <option value="AL">Alagoas</option>
+          <option value="AP">Amapá</option>
+          <option value="AM">Amazonas</option>
+          <option value="BA">Bahia</option>
+          <option value="CE">Ceará</option>
+          <option value="DF">Distrito Federal</option>
+          <option value="ES">Espírito Santo</option>
+          <option value="GO">Goiás</option>
+          <option value="MA">Maranhão</option>
+          <option value="MT">Mato Grosso</option>
+          <option value="MS">Mato Grosso do Sul</option>
+          <option value="MG">Minas Gerais</option>
+          <option value="PA">Pará</option>
+          <option value="PB">Paraíba</option>
+          <option value="PR">Paraná</option>
+          <option value="PE">Pernambuco</option>
+          <option value="PI">Piauí</option>
+          <option value="RJ">Rio de Janeiro</option>
+          <option value="RN">Rio Grande do Norte</option>
+          <option value="RS">Rio Grande do Sul</option>
+          <option value="RO">Rondônia</option>
+          <option value="RR">Roraima</option>
+          <option value="SC">Santa Catarina</option>
+          <option value="SP">São Paulo</option>
+          <option value="SE">Sergipe</option>
+          <option value="TO">Tocantins</option>
+        </select>
+        <button id="ruaSubmit">Buscar</button>
+      </form>
     </div>
 
     <script src="src/script.js"></script>
